# filters

./: .gitignore  CMakeLists.txt  LICENSE  README.md
filter_math/: CMakeLists.txt
filter_math/include/: calculus.h
filter_math/src/: calculus.cpp
filter_math/test/: test_1.cpp  test_2.cpp
filtermath/: CMakeLists.txt
filtermath/include/: gaussian.h  gaussianXd.h
filtermath/src/: gaussian.cpp  gaussianXd.cpp
gh_filter/: CMakeLists.txt  README.md
gh_filter/src/: GHFilter.cpp
gh_filter/tests/: test_1.cpp  test_2.cpp
ghfilter/: CMakeLists.txt
ghfilter/include/: GHFilter.h
kalman/: CMakeLists.txt
kalman/include/: kalman_one_dim.h
kalman/src/: kalman_one_dim.cpp
kalman/test/: test_kalman_one_dim.cpp  test_sciplot.cpp
src/: test_1.cpp
test/: test_3.cpp  test_eigen.cpp  test_linking.cpp
